@@ -166,7 +166,8 @@ class Main(object):
 
         settings = gtk.settings_get_default()
         settings.set_property('gtk-button-images', True)
-        settings.set_property('gtk-can-change-accels', True)
+        settings.set_property('gtk-can-change-accels',
+                CONFIG['client.can_change_accelerators'])
         try:
             settings.set_property('gtk-keynav-cursor-only', True)
         except TypeError:
@@ -586,6 +587,23 @@ class Main(object):
         if (CONFIG['client.toolbar'] or 'both') == 'text':
             radiomenuitem_text.set_active(True)
 
+        # Menubar accelerators
+        menuitem_menubar = gtk.MenuItem(_('_Menubar'))
+        menu_options.add(menuitem_menubar)
+
+        menu_menubar = gtk.Menu()
+        menu_menubar.set_accel_group(self.accel_group)
+        menu_menubar.set_accel_path('<tryton>/Options/Menubar')
+        menuitem_menubar.set_submenu(menu_menubar)
+
+        checkmenuitem_accel = gtk.CheckMenuItem(_('Change Accelerators'))
+        checkmenuitem_accel.connect('activate',
+                lambda menuitem: self.sig_accel_change(menuitem.get_active()))
+        checkmenuitem_accel.set_accel_path('<tryton>/Options/Menubar/Accel')
+        menu_menubar.add(checkmenuitem_accel)
+        if CONFIG['client.can_change_accelerators']:
+            checkmenuitem_accel.set_active(True)
+
         menuitem_mode = gtk.MenuItem(_('_Mode'))
         menu_options.add(menuitem_mode)
 
@@ -904,6 +922,18 @@ class Main(object):
         menu.show_all()
         self.menuitem_shortcut.set_submenu(menu)
         self.menuitem_shortcut.set_sensitive(False)
+
+    def sig_accel_change(self, value):
+        CONFIG['client.can_change_accelerators'] = value
+        return self.sig_accel()
+
+    def sig_accel(self):
+        menubar = CONFIG['client.can_change_accelerators']
+        settings = gtk.settings_get_default()
+        if menubar:
+            settings.set_property('gtk-can-change-accels', True)
+        else:
+            settings.set_property('gtk-can-change-accels', False)
 
     def sig_toolbar_change(self, value):
         CONFIG['form.toolbar'] = value
